@@ -19,20 +19,20 @@ list
     g_classes;          // list of classes/directories
 
 
-setGcopt(string always)
+string setOpt(string install_im, string envvar)
 {
     list optvar;
+    string ret;
 
-    optvar = getenv("CPPFLAGS");    
-
-    g_copt = always;
+    optvar = getenv(envvar);    
 
     if (optvar[0] == "1")
-        g_copt += optvar[1];
-    else if (CPPOPT != "")
-        g_copt += CPPOPT;
-}
+        ret = optvar[1];
+    else 
+        ret = install_im;
 
+    return ret;
+}
 
 void setClasses()
 {
@@ -74,8 +74,12 @@ void initialize()
 
 void link(string library)
 {
-    exec(COMPILER, "-o", g_binary,
-            "-l" + library, libs, "-L.", libpath, g_strip);
+    string lopt;
+
+    lopt = g_strip + setOpt(LDFLAGS, "LDFLAGS");
+
+    exec(COMPILER, "-o", g_binary, 
+                    "-l" + library, libs, "-L.", libpath, lopt);
 }
 
 
@@ -113,7 +117,9 @@ void c_compile(int prefix, string srcDir, list cfiles)
     string compiler;
     string file;
 
-    compiler = COMPILER + " -c -o " + srcDir + "/o/" + (string)prefix;
+    compiler = COMPILER + " -Wall --std=c++0x -c -o " + 
+                            srcDir + "/o/" + (string)prefix;
+
     md(srcDir + "/o");
 
     for (idx = sizeof(cfiles); idx--; )
@@ -187,7 +193,7 @@ void program()
     
     special();
 
-    setGcopt("-Wall --std=c++0x ");
+    g_copt = setOpt(CXXFLAGS, "CXXFLAGS");
 
     cpp_make
     (
