@@ -12,7 +12,6 @@
 #include <bobcat/pattern>
 #include <bobcat/hash>
 #include <bobcat/mstream>
-#include <bobcat/fnwrap>
 #include <bobcat/stat>
 #include <bobcat/datetime>
 #include <bobcat/string>
